# CoAlias

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run-pass.sh
CoAliasPass/: CMakeLists.txt  CoAliasPass.cpp  CoAliasPass.h
objects/: Test-01.ll  Test-01_opt.ll  Test-02.ll  Test-02_opt.ll  Test-03.ll  Test-03_opt.ll  Test-04.ll  Test-04_opt.ll
tests/: Test-01.c  Test-02.c  Test-03.c  Test-04.c
utils/: check-tests.py
